revise content/grammar

--- a/manuscripts/child-documents/discussion.Rmd
+++ b/manuscripts/child-documents/discussion.Rmd
@@ -2,13 +2,13 @@
 
 In this study, we explored the feasibility of using EEG to study network variants by examining whether or not EEG phase coupling and amplitude coupling functional connectomes showed similar evidence of stable individual differences across contexts to what has been described in the fMRI literature. To address this question, we used pairwise contrasts to estimate how much and in which ways functional connectome similarity differed within and between individuals across sessions and states, using eyes open and eyes closed resting state EEG data collected across three sessions over the course of approximately three months. Based on the findings of previous fMRI network variant research [e.g., @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019], we hypothesized that functional connectomes would be more similar within than between individuals across all contrasts, on average, with smaller variations in similarity related to session or state (see Figure \@ref(fig:outcome-plot)).
 
-Overall, our results were inconclusive. In support of our primary scientific hypothesis, the group-level effect sizes most compatible with our data, given the background model, showed that, on average, both phase coupling and amplitude coupling functional connectomes were more similar within than between individuals across contexts and frequency bands (Figures \@ref(fig:phase-similarity-plots-delta)-\@ref(fig:amplitude-similarity-plots-alpha)); that our data was incompatible with a model that assumed zero difference in functional connectome similarity within and between individuals across contexts (Tables \@ref(tab:phase-similarity-table-delta)-\@ref(tab:amplitude-similarity-table-alpha)); and that these differences were attributable to individual-dependent factors with small modulations by session and state (Tables \@ref(tab:phase-similarity-table-delta)-\@ref(tab:amplitude-similarity-table-alpha)). Moreover, the magnitude of these differences varied across contexts in an expected way, with the largest differences in similarity within and between individuals occurring for functional connectomes from the same sessions and states, the smallest differences occurring for functional connectomes from the different sessions and states, and relatively smaller increases and decreases in similarity across other contexts. At this level of description, our results were broadly consistent with the findings of methodologically similar fMRI studies [e.g., @grattonetal_FunctionalBrainNetworks_2018]. These results remained largely consistent for phase coupling functional connectomes when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figures A\@ref(fig:phase-similarity-plots-hilbert-delta)-A\@ref(fig:phase-similarity-plots-hilbert-gamma)); and with few exceptions, these results were consistent between the reduced and maximal models of functional connectome similarity for both both phase coupling and amplitude coupling functional connectomes (Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:amplitude-similarity-plots-maximal-alpha)).
+Overall, our results were inconclusive. In support of our primary scientific hypothesis, the group-level effect sizes most compatible with our data, given the background model, showed that, on average, both phase coupling and amplitude coupling functional connectomes were more similar within than between individuals across contexts and frequency bands (Figures \@ref(fig:phase-similarity-plots-delta)-\@ref(fig:amplitude-similarity-plots-alpha)); that our data were incompatible with a model that assumed zero difference in functional connectome similarity within and between individuals across contexts (Tables \@ref(tab:phase-similarity-table-delta)-\@ref(tab:amplitude-similarity-table-alpha)); and that these differences were attributable to individual-dependent factors with small modulations by session and state (Tables \@ref(tab:phase-similarity-table-delta)-\@ref(tab:amplitude-similarity-table-alpha)). Moreover, the magnitude of these differences varied across contexts in an expected way, with the largest differences in similarity within and between individuals occurring for functional connectomes from the same sessions and states, the smallest differences occurring for functional connectomes from the different sessions and states, and relatively smaller increases and decreases in similarity across other contexts. At this level of description, our results were broadly consistent with the findings of methodologically similar fMRI studies [e.g., @grattonetal_FunctionalBrainNetworks_2018]. These results remained largely consistent for phase coupling functional connectomes when the phase lag index was estimated using the Hilbert transform method instead of the multitaper method (Figures A\@ref(fig:phase-similarity-plots-hilbert-delta)-A\@ref(fig:phase-similarity-plots-hilbert-gamma)); and with few exceptions, these results were consistent between the reduced and maximal models of functional connectome similarity for both phase coupling and amplitude coupling functional connectomes (Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:amplitude-similarity-plots-maximal-alpha)).
 
-However, in general, the group-level effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small, depending on the contrast, coupling mode, and frequency band in question (Figures \@ref(fig:phase-similarity-plots-delta)-\@ref(fig:amplitude-similarity-plots-alpha)). Thus, although our results suggested that, on average, the phase coupling and amplitude coupling dynamics of underlying global network activity in each frequency band was differentiated between individuals across contexts *in our sample*, the influence of individual-dependent factors over and above the influence of stable group-dependent factors was either negligible or at best small. This is a clear departure from what has been described in the fMRI literature, where differences in functional connectome similarity within and between individuals have been reported to be stable, relatively large, and visually obvious, indicative of "a clear influence of individual features over and above common organizational principles at the network level," [@mareketal_SpatialTemporalOrganization_2018] such that fMRI functional connectomes may be well-suited for measuring and identifying the neural causes of variation in human behaviour, cognition, and their dysfunction [@grattonetal_FunctionalBrainNetworks_2018]. Our results do not inspire such confidence---and given the inherent limitations of EEG functional connectivity analysis, it is unclear to what extent they reflect genuinely small interindividual differences in electrophysiological connectivity across contexts, versus methodological limitations, selection bias, or random variation in our sample that may have caused us to underestimate or overestimate the magnitude of interindividual differences relative to the (unknown) true effect(s).
+However, in general, the group-level effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small, depending on the contrast, coupling mode, and frequency band in question (Figures \@ref(fig:phase-similarity-plots-delta)-\@ref(fig:amplitude-similarity-plots-alpha)). Thus, although our results suggested that, on average, the phase coupling and amplitude coupling dynamics of underlying global network activity in each frequency band was differentiated between individuals across contexts *in our sample*, the influence of individual-dependent factors over and above the influence of stable group-dependent factors was negligible or small at best. This is a clear departure from what has been described in the fMRI literature, where differences in functional connectome similarity within and between individuals have been reported to be stable, relatively large, and visually obvious, indicative of "a clear influence of individual features over and above common organizational principles at the network level," [@mareketal_SpatialTemporalOrganization_2018] such that fMRI functional connectomes may be well-suited for measuring and identifying the neural causes of variation in human behaviour, cognition, and their dysfunction [@grattonetal_FunctionalBrainNetworks_2018]. Our results do not inspire such confidence. Indeed, given the inherent limitations of EEG functional connectivity analysis, it is unclear to what extent our results reflect genuinely small interindividual differences in electrophysiological connectivity across contexts, versus methodological limitations, selection bias, or random variation in our sample that may have caused us to underestimate or overestimate the magnitude of interindividual differences relative to the (unknown) true effects.
 
-Finally, we note that although the the group-level effect sizes most compatible with our data, given the background model, more similar within than between individuals, on average, this relationship was not necessarily true for all participants. Indeed, there was a notable degree of outcome variability in the direction (Figure \@ref(fig:subset-similarity-contrast-barplot)) and magnitude (for reduced models, see Figures A\@ref(fig:phase-similarity-subset-plots-delta)-A\@ref(fig:amplitude-similarity-subset-plots-alpha); for maximal models, see Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:amplitude-similarity-plots-maximal-alpha)) of these effects when differences in functional connectome similarity were analyzed at an individual level. These results were also a clear departure from what has been described in the fMRI literature, where differences in functional connectome similarity within and between individuals have been found to be consistently positive at an individual-level, with relatively little outcome variability in the magnitude of these differences [@grattonetal_FunctionalBrainNetworks_2018]. Moreover, because of the outcome variability in our sample, we caution against confusing the positive and precise estimates of average effects for the group-level contrasts with the predictability of individual outcomes, which were more variable in both their direction and magnitude. However, equally, we also caution against confusing the individual-level contrasts whose direction was unresolved with precise zero effects or evidence of no positive difference in functional connectome similarity. For many of these contrasts, the effect sizes most compatible with our data, given the background model, included a range of effects that---although generally still at most small---were not negligible; thus, even though they leave open the possibility of negative, zero, or positive but negligible effects, they also leave open the possibility of small effects that may be worth investigating further.
+Finally, we note that although the group-level effect sizes most compatible with our data, given the background model, were more similar within than between individuals, on average, this relationship was not true for all participants. Indeed, there was a notable degree of outcome variability in the direction (Figure \@ref(fig:subset-similarity-contrast-barplot)) and magnitude (for reduced models, see Figures A\@ref(fig:phase-similarity-subset-plots-delta)-A\@ref(fig:amplitude-similarity-subset-plots-alpha); for maximal models, see Figures A\@ref(fig:phase-similarity-plots-maximal-theta)-A\@ref(fig:amplitude-similarity-plots-maximal-alpha)) of these effects when differences in functional connectome similarity were analyzed at an individual level. These results were also a clear departure from what has been described in the fMRI literature, where differences in functional connectome similarity within and between individuals have been found to be consistently positive at an individual-level, with relatively little outcome variability in the magnitude of these differences [@grattonetal_FunctionalBrainNetworks_2018]. Moreover, because of the outcome variability in our sample, we caution against confusing the positive and precise estimates of average effects for the group-level contrasts with the predictability of individual outcomes, which were more variable in both their direction and magnitude. However, equally, we also caution against confusing the individual-level contrasts whose direction was unresolved with precise zero effects or evidence of no positive difference in functional connectome similarity. For many of these contrasts, the effect sizes most compatible with our data, given the background model, included a range of effects that---although generally still small---were not negligible; thus, even though they leave open the possibility of negative, zero, or positive but negligible effects, they also leave open the possibility of small effects that may be worth investigating further.
 
-Considered together, given the background model used to investigate our research question, our results did not generally demonstrate the feasibility of using EEG to study network variants due to the inconsistencies observed across participants in our sample. At best our findings leave open the possibility that EEG functional connectomes may be suitable measures of stable individual differences in whole brain functional network organization, given that both the group-level results and a subset of individual-level results showed consistently positive differences in functional connectome similarity within versus between individuals across contexts and frequency bands; however, equally, it is apparent that if the phase coupling and/or amplitude coupling dynamics of underlying global network activity across frequency bands are indeed influenced by stable individual-dependent factors, further work identifying and developing methods to reliably measure and quantify these stable individual differences is necessary.
+Considered together, given the background model used to investigate our research question, our results did not generally demonstrate the feasibility of using EEG to study network variants due to the inconsistencies observed across participants in our sample. At best our findings leave open the possibility that EEG functional connectomes may be suitable measures of stable individual differences in whole brain functional network organization, given that both the group-level results and a subset of individual-level results showed consistently positive differences in functional connectome similarity within versus between individuals across contexts and frequency bands; however, it is apparent that if the phase coupling and/or amplitude coupling dynamics of underlying global network activity across frequency bands are indeed influenced by stable individual-dependent factors, further work identifying and developing methods to reliably measure and quantify these stable individual differences is necessary.
 
 ## Consistency with related neurophysiological connectomics literature
 
