--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -22,11 +22,11 @@ Oscillatory patterning, which reflects the timing of neuronal activity, is a bas
 
 Here the frequency, regularity, and probability of oscillatory coupling depends on the time constants of excitatory and inhibitory postsynaptic potentials, which provide windows of alternating reduced and enhanced excitability for action potentials to occur [@buzsaki_RhythmsBrain_2011; @buzsakiwatson_BrainRhythmsNeural_2012; @fries_RhythmsCognitionCommunication_2015; @singer_NeuronalOscillationsUnavoidable_2018]. If the time constants are similar between the presynaptic and postsynaptic networks, incoming excitatory postsynaptic potentials will arrive at the peak of enhanced excitability and have a high probability to summate effectively and generate action potentials; however, if the time constants are too dissimilar, excitatory postsynaptic potentials will arrive during inhibitory windows and have a lower probability to summate effectively and reach the firing threshold because of hyperpolarization [@buzsaki_RhythmsBrain_2011; @buzsakiwatson_BrainRhythmsNeural_2012; @fries_RhythmsCognitionCommunication_2015; @singer_NeuronalOscillationsUnavoidable_2018]. Thus, oscillations provide a putative mechanism through which the brain can dynamically coordinate the flow of information by effectively gating or biasing whether computations are amplified or ignored by different senders and receivers throughout the network [@bastosschoffelen_TutorialReviewFunctional_2016; @buzsaki_RhythmsBrain_2011; @buzsakidraguhn_NeuronalOscillationsCortical_2004; @buzsakiwatson_BrainRhythmsNeural_2012; @engeletal_IntrinsicCouplingModes_2013; @garrettetal_MomenttomomentBrainSignal_2013; @schnitzlergross_NormalPathologicalOscillatory_2005].
 
-Neuronal networks in the cerebral cortex support several families of oscillations (oscillatory bands) that act relatively independently, are continuously present, and span from approximately 0.05 Hz to 500 Hz, covering more than four orders of magnitude on a temporal scale [@buzsaki_RhythmsBrain_2011; @buzsakidraguhn_NeuronalOscillationsCortical_2004; @buzsakiwatson_BrainRhythmsNeural_2012]. These oscillatory bands are defined as frequency bands with logarithmically increasing centre frequencies and relatively constant frequency width ratios between neighbouring bands (Figure \@ref(fig:oscillatory-bands-plot)). Each band is characterized by a distinct temporal processing window determined by its frequency, and several rhythms can temporally coexist, compete, or otherwise interact with each other locally or globally [@buzsaki_RhythmsBrain_2011; @buzsakidraguhn_NeuronalOscillationsCortical_2004]. The number of neurons that can participate in a given rhythm is constrained by the slow axon conduction velocity of neurons; thus, relative to higher frequency oscillations, lower frequency oscillations involve more neurons and are associated with larger membrane potential fluctuations because in longer temporal windows the action potentials of many more presynaptic neurons can be integrated [@buzsakiwatson_BrainRhythmsNeural_2012]. Because of this structural constraint, when multiple oscillations are present simultaneously, the phase of slower oscillations modulates the amplitude of faster oscillations [@buzsakiwatson_BrainRhythmsNeural_2012].
+Neuronal networks in the cerebral cortex support several families of oscillations (oscillatory bands) that act relatively independently, are continuously present, and span from approximately 0.05 Hz to 500 Hz, covering more than four orders of magnitude on a temporal scale [@buzsaki_RhythmsBrain_2011; @buzsakidraguhn_NeuronalOscillationsCortical_2004; @buzsakiwatson_BrainRhythmsNeural_2012]. These oscillatory bands are defined as frequency bands with logarithmically increasing centre frequencies and relatively constant frequency width ratios between neighbouring bands [Figure \@ref(fig:oscillatory-bands-plot)\; @penttonenbuzsaki_NaturalLogarithmicRelationship_2003]. Each band is characterized by a distinct temporal processing window determined by its frequency, and several rhythms can temporally coexist, compete, or otherwise interact with each other locally or globally [@buzsaki_RhythmsBrain_2011; @buzsakidraguhn_NeuronalOscillationsCortical_2004]. The number of neurons that can participate in a given rhythm is constrained by the slow axon conduction velocity of neurons; thus, relative to higher frequency oscillations, lower frequency oscillations involve more neurons and are associated with larger membrane potential fluctuations because in longer temporal windows the action potentials of many more presynaptic neurons can be integrated [@buzsakiwatson_BrainRhythmsNeural_2012]. Because of this structural constraint, when multiple oscillations are present simultaneously, the phase of slower oscillations modulates the amplitude of faster oscillations [@buzsakiwatson_BrainRhythmsNeural_2012].
 
 ```{r oscillatory-bands-plot}
 #| fig.height: 3.630290
-#| fig.cap: "Oscillatory bands in the cerebral cortex follow a linear progression of frequencies on the natural logarithmic scale with relatively constant ratios between neighbouring bands [@penttonenbuzsaki_NaturalLogarithmicRelationship_2003]. The lower and upper limits of neighbouring bands overlap, resulting in a frequency coverage of more than four orders of magnitude on a temporal scale. For each band, the approximate bandwidth and centre frequency is shown along with its commonly used name."
+#| fig.cap: "Oscillatory bands in the cerebral cortex follow a linear progression of frequencies on the natural logarithmic scale with relatively constant ratios between neighbouring bands (Penttonen & Buzsáki, 2003). The lower and upper limits of neighbouring bands overlap, resulting in a frequency coverage of more than four orders of magnitude on a temporal scale. For each band, the approximate bandwidth and centre frequency is shown along with its commonly used name."
 knitr::include_graphics(here::here("figures", "oscillatory-bands-plot.png"))
 ```
 
@@ -36,7 +36,7 @@ The purpose of functional connectivity analysis is to (at least partly) quantify
 
 ## Measuring human brain oscillations
 
-Ongoing oscillations---reflecting synchronized rhythmic fluctuations in the excitability of local neuronal populations---are the most prominent feature of all neural signals and can be described by three pieces of information: frequency, amplitude, and phase [@cohen_AnalyzingNeuralTime_2014; @cohen_WhereDoesEEG_2017; @luck_IntroductionEventrelatedPotential_2014]. Frequency is the number of oscillatory cycles per second and is measured in hertz (Hz); it describes the speed or timescale of an oscillation. Amplitude is the peak to trough distance of an oscillation and is typically measured in microvolts (mV) for EEG and percent change from baseline for fMRI, normalized from the arbitrary units (AU) of the raw BOLD signal by some baseline value (e.g., the signal mean\; @liuetal_GlobalSignalFMRI_2017); it generally has an inverse relationship with frequency such that higher frequency oscillations have lower amplitudes, and vice versa. Phase is the timing of an oscillation relative to where it is along its oscillatory cycle and is measured in radians or degrees; it is independent of amplitude, so the neural dynamics reflected in amplitude are distinct from those reflected in phase [@cohen_AnalyzingNeuralTime_2014]. These properties of an oscillation are illustrated in Figure \@ref(fig:oscillation-plot), which depicts two sinusoidal waves with the same amplitude (1 AU) and phase (0 degrees) but different frequencies (1 Hz and 2 Hz) evolving over the course of one second in both Cartesian and polar coordinates.
+Ongoing oscillations---reflecting synchronized rhythmic fluctuations in the excitability of local neuronal populations---are the most prominent feature of all neural signals and can be described by three pieces of information: frequency, amplitude, and phase [@cohen_AnalyzingNeuralTime_2014; @cohen_WhereDoesEEG_2017; @luck_IntroductionEventrelatedPotential_2014]. Frequency is the number of oscillatory cycles per second and is measured in hertz (Hz); it describes the speed or timescale of an oscillation. Amplitude is the peak to trough distance of an oscillation and is typically measured in microvolts (mV) for EEG and percent change from baseline for fMRI, normalized from the arbitrary units (AU) of the raw BOLD signal by some baseline value [e.g., the signal mean\; @liuetal_GlobalSignalFMRI_2017]; it generally has an inverse relationship with frequency such that higher frequency oscillations have lower amplitudes, and vice versa. Phase is the timing of an oscillation relative to where it is along its oscillatory cycle and is measured in radians or degrees; it is independent of amplitude, so the neural dynamics reflected in amplitude are distinct from those reflected in phase [@cohen_AnalyzingNeuralTime_2014]. These properties of an oscillation are illustrated in Figure \@ref(fig:oscillation-plot), which depicts two sinusoidal waves with the same amplitude (1 AU) and phase (0 degrees) but different frequencies (1 Hz and 2 Hz) evolving over the course of one second in both Cartesian and polar coordinates.
 
 ```{r oscillation-plot}
 #| fig.height: 3.630290
@@ -60,7 +60,7 @@ EEG measures oscillations in extracellular currents caused primarily by summed e
 
 Volume conduction simply refers to the effects of measuring electrical fields at a distance from their source. The primary effect of volume conduction in EEG is field spread---wherein the electrical fields generated by a source can spread not only to the nearest electrode, but also to other electrodes (up to tens of centimetres away) [@cohen_AnalyzingNeuralTime_2014; @nunezsrinivasan_ElectricFieldsBrain_2006; @schaworonkownikulin_SensorSpaceAnalysis_2022; @schoffelengross_SourceConnectivityAnalysis_2009]. This creates two challenges for studying whole brain functional networks with EEG. First, because the locations of electrodes are not trivially related to the locations of their sources, the topography of scalp-level EEG cannot be interpreted in terms of the underlying neuroanatomy [@laietal_ComparisonScalpSourcereconstructed_2018; @mahjooryetal_ConsistencyEEGSource_2017]. For example, occipital alpha sources (8-13 Hz) can account for a very large part of the activity measured by frontal electrodes in simulated and empirical data, with the extent of this effect varying based on the dipole orientation of the source, the amplitude of the oscillations, cortical anatomy, and the choice of the reference electrode [@chellaetal_ImpactReferenceChoice_2016; @cohen_AnalyzingNeuralTime_2014; @haufeetal_CriticalAssessmentConnectivity_2013; @schaworonkownikulin_SensorSpaceAnalysis_2022]. Consequently, functional connectivity between, for example, a frontal and occipital electrode may not reflect functional connectivity a frontal and occipital source. However, by these same physical laws, differences in functional connectivity imply that different distributions of neuronal sources are active in the brain over space and time; thus, although volume conduction precludes a neurophysiological interpretation of the topography of scalp-level EEG, differences in functional connectome organization within and between individuals provide an opaque indication of differences in global network activity [@michelkoenig_EEGMicrostatesTool_2018; @schoffelengross_SourceConnectivityAnalysis_2009]. Second, because the same source can be measured by multiple electrodes simultaneously, there is a potential for estimates of functional connectivity between two electrodes to be confounded by those two electrodes measuring the same source [@cohen_AnalyzingNeuralTime_2014; @laietal_ComparisonScalpSourcereconstructed_2018]. Given that the ultimate purpose of functional connectivity analysis is to identify and quantify interactions between spatially separate neuronal populations, the challenges caused by volume conduction are non-trivial and it is now widely acknowledged that volume conduction should be accounted for in EEG functional connectivity analyses [@bastosschoffelen_TutorialReviewFunctional_2016; @haufeetal_CriticalAssessmentConnectivity_2013; @laietal_ComparisonScalpSourcereconstructed_2018; @nolteetal_IdentifyingTrueBrain_2004; @schoffelengross_SourceConnectivityAnalysis_2009].
 
-To date, two main approaches have been employed throughout the literature to address the challenges caused by volume conduction. The first approach is to use inverse source reconstruction methods, which attempt to unmix the activity measured across all electrodes to estimate the location of the underlying sources [@michelbrunet_EEGSourceImaging_2019]. Source localization is an ill-posed problem (i.e., it has an infinite number of solutions) that works by first modelling the volume conduction properties of the human head to determine the potential at each scalp electrode that would be generated by hypothetical dipoles in the brain (the forward model); then---taking into consideration the forward model and electrode noise---using an inverse source reconstruction algorithm (the source model) to estimate the dipole parameters that best explain the observed scalp potential measurements, based on constraints and assumptions imposed by the source model about the underlying sources [@grechetal_ReviewSolvingInverse_2008; @michelbrunet_EEGSourceImaging_2019]. The spatial fidelity and accuracy of source localization and subsequent functional connectivity estimates is affected by several factors, including the accuracy of the forward model [@akalinacarmakeig_EffectsForwardModel_2013; @cespedes-villaretal_InfluencePatientSpecificHead_2020; @chauveauetal_EffectsSkullThickness_2004; @dalaletal_ConsequencesEEGElectrode_2014; @hallezetal_ReviewSolvingForward_2007; @hongetal_HowReducingModel_2011; @liuetal_ComparisonEEGSource_2023; @liuetal_DetectingLargeScaleBrain_2018; @mccannbeltrachini_ImpactSkullSutures_2022; @nielsenetal_EvaluatingInfluenceAnatomical_2023; @tabernaetal_DetectionRestingStateFunctional_2021], the chosen source model [@hatlestad-halletal_ReliableEvaluationFunctional_2023; @haufeetal_CriticalAssessmentConnectivity_2013; @liuetal_DetectingLargeScaleBrain_2018; @mahjooryetal_ConsistencyEEGSource_2017; @nguyen-danseetal_FeasibilityReconstructingSource_2021; @nolteetal_IdentifyingTrueBrain_2004], instrumental or biological noise [@ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006; @whittingstalletal_EffectsDipolePosition_2003], and electrode density [@hatlestad-halletal_ReliableEvaluationFunctional_2023; @michelbrunet_EEGSourceImaging_2019; @seecketal_StandardizedEEGElectrode_2017]; because of these factors, the validity of source space functional connectivity estimates may be in question in the absence of other sources of convergent evidence (e.g., fMRI, animal models, etc.). Inverse source reconstruction methods primarily address the first challenge for studying whole brain functional networks with EEG---by estimating the location of the underlying sources, signals are localized to dipoles in the brain, making it possible to interpret EEG in terms of the underlying neuroanatomy. However, artifacts of volume conduction persist in all source estimates (where they are often referred to as source or signal leakage), thus source-reconstructed EEG can still contain spurious estimates of functional connectivity [@bastosschoffelen_TutorialReviewFunctional_2016; @haufeetal_CriticalAssessmentConnectivity_2013; @schoffelengross_SourceConnectivityAnalysis_2009].
+To date, two main approaches have been employed throughout the literature to address the challenges caused by volume conduction. The first approach is to use inverse source reconstruction methods, which attempt to unmix the activity measured across all electrodes to estimate the location of the underlying sources [@michelbrunet_EEGSourceImaging_2019]. Source localization is an ill-posed problem (i.e., it has an infinite number of solutions) that works by first modelling the volume conduction properties of the human head to determine the potential at each scalp electrode that would be generated by hypothetical dipoles in the brain (the forward model); then---taking into consideration the forward model and electrode noise---using an inverse source reconstruction algorithm (the source model) to estimate the dipole parameters that best explain the observed scalp potential measurements, based on constraints and assumptions imposed by the source model about the underlying sources [@grechetal_ReviewSolvingInverse_2008; @michelbrunet_EEGSourceImaging_2019]. The spatial fidelity and accuracy of source localization and subsequent functional connectivity estimates is affected by several factors, including the accuracy of the forward model [e.g., @akalinacarmakeig_EffectsForwardModel_2013; @liuetal_ComparisonEEGSource_2023; @nielsenetal_EvaluatingInfluenceAnatomical_2023; @tabernaetal_DetectionRestingStateFunctional_2021], the chosen source model [e.g., @hatlestad-halletal_ReliableEvaluationFunctional_2023; @haufeetal_CriticalAssessmentConnectivity_2013; @liuetal_DetectingLargeScaleBrain_2018; @mahjooryetal_ConsistencyEEGSource_2017], instrumental or biological noise [e.g., @ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006; @whittingstalletal_EffectsDipolePosition_2003], and electrode density [e.g., @hatlestad-halletal_ReliableEvaluationFunctional_2023; @michelbrunet_EEGSourceImaging_2019; @seecketal_StandardizedEEGElectrode_2017]; because of these factors, the validity of source space functional connectivity estimates may be in question in the absence of other sources of convergent evidence (e.g., fMRI, animal models, etc.). Inverse source reconstruction methods primarily address the first challenge for studying whole brain functional networks with EEG---by estimating the location of the underlying sources, signals are localized to dipoles in the brain, making it possible to interpret EEG in terms of the underlying neuroanatomy. However, artifacts of volume conduction persist in all source estimates (where they are often referred to as source or signal leakage), thus source-reconstructed EEG can still contain spurious estimates of functional connectivity [@bastosschoffelen_TutorialReviewFunctional_2016; @haufeetal_CriticalAssessmentConnectivity_2013; @schoffelengross_SourceConnectivityAnalysis_2009].
 
 <!-- Source-reconstructed EEG is generally a resource-demanding method, requiring the same resources as fMRI in addition to an EEG or simultaneous fMRI-EEG system; however, it is possible to reduce resource demands by using a template MRI of an average human head rather than individual MRI scans for the forward model [@michelbrunet_EEGSourceImaging_2019]. Whether or not it is appropriate to use a template MRI for source-reconstructed EEG network variant studies is an open question. While the advantages of using individual MRI scans for the forward model are obvious---and there is sufficient evidence that using a template MRI results in less precise source localization [@brodbecketal_ElectroencephalographicSourceImaging_2011; @guggisbergetal_LocalizationCorticoperipheralCoherence_2011]---no study to date has investigated how the variability of functional connectome organization changes between and within individuals when using individual or template MRIs. Rather than speculate, here we simply note that in cases where a template MRI is used (or where analyses are done in sensor space rather than source space), EEG is a portable and less resource-demanding method relative to fMRI, with research-grade systems typically costing anywhere from around \$30,000 to \$100,000 depending on the configuration, negligible recording costs, and shorter recording times (due to the high sampling rate), making it a potentially more accessible method to a broader population of researchers and research participants [@ledwidgeetal_RecommendationsDevelopingEEG_2018], including those from lower-income and middle-income countries [@bhavnanietal_AcceptabilityFeasibilityUtility_2022; cf. @nguyen-danseetal_FeasibilityReconstructingSource_2021]. -->
 
@@ -210,6 +210,6 @@ Finally, given our focus on individual differences, we considered it naturally i
 
 [^4]: To be clear, this is not to say that brain state or time have no influence on interindividual variability in connectivity strength. Indeed, the relative magnitude of functional connectome similarities within and between individuals has been found to vary moderately by behavioural or cognitive state and mildly by time such that individualization is measurably greater during certain brain states than others, and slightly greater for recordings taken during the same session [@finnetal_CanBrainState_2017; @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019]. However, this influence is considerably smaller relative to the influence contributed by individuals themselves [@grattonetal_FunctionalBrainNetworks_2018].
 
-[^5]: These values correspond to the *main effect* contrasts in our study and were obtained by back-transforming the Fisher-transformed Pearson correlation coefficients for the group and individual effects reported in @grattonetal_FunctionalBrainNetworks_2018, then taking their difference. For the split-half method, functional connectivity was estimated for each individual and task on the basis of two 5-session groups (by concatenating the recordings from a given task in each group together to increase the reliability of functional connectivity estimates), rather than at the recording level (for further details, see @grattonetal_FunctionalBrainNetworks_2018).
+[^5]: These values correspond to the *main effect* contrasts in our study and were obtained by back-transforming the Fisher-transformed Pearson correlation coefficients for the group and individual effects reported in @grattonetal_FunctionalBrainNetworks_2018, then taking their difference. For the split-half method, functional connectivity was estimated for each individual and task on the basis of two 5-session groups (by concatenating the recordings from a given task in each group together to increase the reliability of functional connectivity estimates), rather than at the recording level [for further details, see @grattonetal_FunctionalBrainNetworks_2018].
 
 <!-- Footnotes end ----------------------------------------------------------->
