--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -202,7 +202,7 @@ After fitting the model, we constructed a reference grid using estimated margina
 
 We use interval plots to report the group-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. To interpret these contrasts, we report compatibility intervals (CIs), which are equivalent to classical confidence intervals [@amrheingreenland_DiscussPracticalImportance_2022]. An $x\%$ compatibility interval shows the effect sizes most compatible with our data, given the correctness of the set of procedural and statistical assumptions used to compute the interval, which we call the *background model* [see @amrheingreenland_DiscussPracticalImportance_2022]. As discussed by @amrheinetal_ScientistsRiseStatistical_2019, there are two important points to keep in mind when interpreting compatibility intervals. First, although interval shows the values most compatible with our data, it does not mean values outside the interval are incompatible; they are merely less compatible, given our background model. Indeed, there are many values outside the interval that will also be compatible with our data, which have not been included due to (known and unknown) assumptions that we have not modelled [@amrheinetal_InferentialStatisticsDescriptive_2019]. Second, the point estimate and values near it are more compatible with our data than values near the limits of the interval; we use both 95% and 66% compatibility intervals in our plots to highlight this. Additionally, given that the correctness of *all* assumptions used to compute our estimates was doubtful (e.g., we knowingly misspecified the random effects of the reduced mixed beta regression models, the absence of measurement errors in our procedure is unlikely, etc.), we emphasize that our estimates likely understate uncertainty about the effect sizes most compatible with our data, and should not be taken as showing some general truth [@amrheinetal_InferentialStatisticsDescriptive_2019].
 
-In addition, to assist readers unfamiliar with the analytic approach we have taken here, for each contrast we also report the observed $p$-value corresponding to a targeted hypothesis test of zero difference in functional connectome similarity within and between participants. The $p$-value takes values between 0 and 1 and provides a measure of the degree of statistical compatibility between the targeted hypothesis and our data, given the background model [@greenland_ValidPValuesBehave_2019; @greenlandetal_StatisticalTestsValues_2016]. A value of 0 indicates complete incompatibility between the targeted hypothesis and our data, and a value of 1 indicates no incompatibility between the targeted hypothesis and our data apparent from the test [@greenland_ValidPValuesBehave_2019]. Additionally, just as we discussed for compatibility intervals, we emphasize that each $p$-value refers to a targeted hypothesis test of *every* assumption used to compute the test, including procedural and statistical assumptions as well as the targeted hypothesis of zero difference [@greenland_InvitedCommentaryNeed_2017]. Thus, a small $p$-value only suggests that there may be a problem with at least one assumption used to compute the test, without indicating which one; and a large $p$-value only suggests that the test did not detect a problem, without indicating whether this was because there were no problems or because the test was insensitive to them [@amrheinetal_InferentialStatisticsDescriptive_2019; @greenland_InvitedCommentaryNeed_2017]. Given that the correctness of *all* assumptions used to compute our tests was doubtful, we emphasize that the observed $p$-values corresponding to each of our targeted hypothesis tests merely describe the relation of our models to our data and should not be taken as providing generalizable truths about the veracity of our scientific hypotheses [@amrheinetal_InferentialStatisticsDescriptive_2019].
+In addition, to assist readers unfamiliar with the analytic approach we have taken here, for each contrast we also report the observed $p$-value corresponding to a targeted hypothesis test of zero difference in functional connectome similarity within and between participants. Just as we discussed for compatibility intervals, we emphasize that each $p$-value merely provides a measure of the degree of statistical compatibility between the targeted hypothesis and our data, given the background model---referring to a targeted hypothesis test of *every* assumption used to compute the test, including procedural and statistical assumptions as well as the targeted hypothesis of zero difference [@greenland_InvitedCommentaryNeed_2017; @greenland_ValidPValuesBehave_2019; @greenlandetal_StatisticalTestsValues_2016]. Thus, a small $p$-value only suggests that there may be a problem with at least one assumption used to compute the test, without indicating which one; and a large $p$-value only suggests that the test did not detect a problem, without indicating whether this was because there were no problems or because the test was insensitive to them [@amrheinetal_InferentialStatisticsDescriptive_2019; @greenland_InvitedCommentaryNeed_2017].
 
 ### Individual-level functional connectome similarity contrasts
 
