--- a/manuscripts/child-documents/results.Rmd
+++ b/manuscripts/child-documents/results.Rmd
@@ -1,6 +1,6 @@
 # Results
 
-The results section is split into three parts. In the first part, we provide a brief summary of our functional connectivity analyses, which serves to demonstrate that both of our functional connectivity metrics gave reasonable results in each frequency band that were in agreement with previous published published work. In the second part, we investigate differences in functional connectome similarity within and between participants at the group-level.[^7] In the final part, we investigate outcome variability in differences in functional connectome similarity within and between participants at the individual-level.
+The results section is split into three parts. In the first part, we provide a brief summary of our functional connectivity analyses, which serves to demonstrate that both of our functional connectivity metrics gave reasonable results in each frequency band that were in agreement with previous published work. In the second part, we investigate differences in functional connectome similarity within and between participants at the group-level.[^7] In the final part, we investigate outcome variability in differences in functional connectome similarity within and between participants at the individual-level.
 
 ## Functional connectivity analyses
 
@@ -48,9 +48,9 @@ knitr::opts_chunk$set(fig.height = 5.445434)
 
 Figure \@ref(fig:phase-similarity-plots-delta)A shows the connectivity profiles for all phase coupling functional connectomes in the delta band, organized by participant and recording. Plots and summary statistics of the distribution of coupling magnitudes across all recordings and EEG channel pairs are shown above in Figure \@ref(fig:connectivity-histograms-figure) and Table \@ref(tab:connectivity-summary-table), respectively.
 
-Figure \@ref(fig:phase-similarity-plots-delta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the delta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-delta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-delta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the delta band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
+Figure \@ref(fig:phase-similarity-plots-delta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the delta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-delta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-delta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most) small positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the delta band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-delta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal models of functional connectome similarity when the phase lag index was estimated using the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-delta)), but with slightly more uncertainty in the estimates. The maximal model of functional connectome similarity did not converge when the phase lag index was estimated using the multitaper method (Table A\@ref(tab:convergence-check-table)). 
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-delta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal models of functional connectome similarity when the phase lag index was estimated using the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-delta)), but with slightly more uncertainty in the estimates. The maximal model of functional connectome similarity did not converge when the phase lag index was estimated using the multitaper method (Table A\@ref(tab:convergence-check-table)). 
 
 \newpage
 
@@ -77,9 +77,9 @@ targets::tar_read(phase_similarity_contrasts_table_nhst_delta) |>
 
 Figure \@ref(fig:phase-similarity-plots-theta)A shows the connectivity profiles for all phase coupling functional connectomes in the theta band, organized by participant and recording. Plots and summary statistics of the distribution of coupling magnitudes across all recordings and EEG channel pairs are shown above in Figure \@ref(fig:connectivity-histograms-figure) and Table \@ref(tab:connectivity-summary-table), respectively.
 
-Figure \@ref(fig:phase-similarity-plots-theta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the theta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-theta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-theta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the theta band was differentiated between individuals across contexts, but with only a slight influence of individual-dependent factors over and above the influence of stable group-dependent factors.
+Figure \@ref(fig:phase-similarity-plots-theta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the theta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-theta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-theta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most) small positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the theta band was differentiated between individuals across contexts, but with only a slight influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-theta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally of similar magnitudes, with the exception of the within sessions and between states contrast which was visibly smaller. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-theta)) and the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-theta)), but with slightly more uncertainty in the estimates.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-theta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally of similar magnitudes, with the exception of the within sessions and between states contrast which was visibly smaller. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-theta)) and the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-theta)), but with slightly more uncertainty in the estimates.
 
 \newpage
 
@@ -108,9 +108,9 @@ Figure \@ref(fig:phase-similarity-plots-alpha)A shows the connectivity profiles 
 
 Figure \@ref(fig:phase-similarity-plots-alpha)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the alpha band. There were no visually obvious patterns of similarity consistent across participants, but there were some individual differences worth highlighting: Participant P03 showed high similarity across sessions and states, corresponding to an individual effect; Participants P14, P17, and P19 showed moderate to high similarity in the eyes open state across sessions, and moderate similarity between participants, corresponding to a partial state effect; and participants P07, P08, P11, and P20 showed moderate similarity across sessions and states with themselves and each other, corresponding to a partial group effect. The remaining participants showed no distinctive patterns. Additionally, unlike the delta, theta, beta, and gamma bands, the amount of similarity between participants was generally moderate and considerably more variable; not consistently high.
 
-However, despite the presence of more visually apparent individual effects, there was still a strong group effect. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-alpha)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were still at most small. Table \@ref(tab:phase-similarity-table-alpha) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with small modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the alpha band was differentiated between individuals across contexts, but with only a small influence of individual-dependent factors over and above the influence of stable group-dependent factors.
+However, despite the presence of more visually apparent individual effects, there was still a strong group effect. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-alpha)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were still at most small. Table \@ref(tab:phase-similarity-table-alpha) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most) small positive differences in functional connectome similarity can be attributed to individual-dependent factors with small modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the alpha band was differentiated between individuals across contexts, but with only a small influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-alpha)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; and (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; however, differences in functional connectome similarity were generally of similar magnitudes. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-alpha)) and the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-alpha)), but with slightly more uncertainty in the estimates.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-alpha)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; and (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; however, differences in functional connectome similarity were generally of similar magnitudes. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-alpha)) and the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-alpha)), but with slightly more uncertainty in the estimates.
 
 \newpage
 
@@ -137,9 +137,9 @@ targets::tar_read(phase_similarity_contrasts_table_nhst_alpha) |>
 
 Figure \@ref(fig:phase-similarity-plots-beta)A shows the connectivity profiles for all phase coupling functional connectomes in the beta band, organized by participant and recording. Plots and summary statistics of the distribution of coupling magnitudes across all recordings and EEG channel pairs are shown above in Figure \@ref(fig:connectivity-histograms-figure) and Table \@ref(tab:connectivity-summary-table), respectively.
 
-Figure \@ref(fig:phase-similarity-plots-beta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the beta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-beta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-beta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the beta band was differentiated between individuals across contexts, but with only a slight influence of individual-dependent factors over and above the influence of stable group-dependent factors.
+Figure \@ref(fig:phase-similarity-plots-beta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the beta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-beta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-beta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most) small positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the beta band was differentiated between individuals across contexts, but with only a slight influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-beta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-beta)) and the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-beta)), but with slightly more uncertainty in the estimates.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-beta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-beta)) and the Hilbert transform method (Figure A\@ref(fig:phase-similarity-plots-hilbert-maximal-beta)), but with slightly more uncertainty in the estimates.
 
 \newpage
 
@@ -166,9 +166,9 @@ targets::tar_read(phase_similarity_contrasts_table_nhst_beta) |>
 
 Figure \@ref(fig:phase-similarity-plots-gamma)A shows the connectivity profiles for all phase coupling functional connectomes in the gamma band, organized by participant and recording. Plots and summary statistics of the distribution of coupling magnitudes across all recordings and EEG channel pairs are shown above in Figure \@ref(fig:connectivity-histograms-figure) and Table \@ref(tab:connectivity-summary-table), respectively.
 
-Figure \@ref(fig:phase-similarity-plots-gamma)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the gamma band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-gamma)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-gamma) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the gamma band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
+Figure \@ref(fig:phase-similarity-plots-gamma)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the gamma band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-gamma)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-gamma) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most) small positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the gamma band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-gamma)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-gamma)) and the Hilbert transform method (Figures A\@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)), but with slightly more uncertainty in the estimates. This increased uncertainty resulted in the direction of the between sessions, between sessions and within states, and between sessions and states contrasts to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for these contrasts, given the background model, also included the possibility of (essentially) zero difference.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the multitaper method (Figure A\@ref(fig:phase-similarity-plots-hilbert-gamma)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure A\@ref(fig:phase-similarity-plots-maximal-gamma)) and the Hilbert transform method (Figures A\@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)), but with slightly more uncertainty in the estimates. This increased uncertainty resulted in the direction of the between sessions, between sessions and within states, and between sessions and states contrasts to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for these contrasts, given the background model, also included the possibility of (essentially) zero difference.
 
 \newpage
 
@@ -199,7 +199,7 @@ Figure \@ref(fig:amplitude-similarity-plots-alpha)A shows the connectivity profi
 
 Figure \@ref(fig:amplitude-similarity-plots-alpha)B shows the functional connectome similarity estimates between all pairs of amplitude coupling functional connectomes in the alpha band. Interestingly---although perhaps not surprisingly given the spatial correspondence between phase coupling and amplitude coupling functional connectomes (Figure \@ref(fig:illustrative-connectomes-figure))---similar patterns of individual differences in functional connectome similarity were observed here in relation to the phase coupling similarities observed in the alpha band (Figure \@ref(fig:phase-similarity-plots-alpha)B). However, there was also a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state.
 
-This was supported by the group-level contrast results in Figure \@ref(fig:amplitude-similarity-plots-alpha)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:amplitude-similarity-table-alpha) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with small modulations by session and state. Jointly, these results suggest that, on average, the amplitude coupling dynamics of underlying global network activity in the alpha band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
+This was supported by the group-level contrast results in Figure \@ref(fig:amplitude-similarity-plots-alpha)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:amplitude-similarity-table-alpha) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most) small positive differences in functional connectome similarity can be attributed to individual-dependent factors with small modulations by session and state. Jointly, these results suggest that, on average, the amplitude coupling dynamics of underlying global network activity in the alpha band was differentiated between individuals across contexts, but with only a slight, negligible influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
 The contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity, but with slightly more uncertainty in the estimates (Figure A\@ref(fig:amplitude-similarity-plots-maximal-alpha)). This increased uncertainty resulted in the direction of the between sessions and states contrast to become unresolved. However, the difference in interpretation between the maximal model and reduced model results here was minor: The maximal model simply requires the qualification that the differences in functional connectome similarity within and between participants most compatible with our data for this contrast, given the background model, also included the possibility of (essentially) zero difference.
 
