--- a/manuscripts/child-documents/frontmatter.Rmd
+++ b/manuscripts/child-documents/frontmatter.Rmd
@@ -51,7 +51,7 @@ officer::block_section(officer::prop_section(type = "nextPage"))
 Abstract
 :::
 
-Functional MRI (fMRI) studies have shown that the human functional connectome exhibits reliable and substantial variability in organization across individuals, so-called network variants. However, it is unclear whether neuroimaging modalities that measure different aspects of brain function show similar evidence of such individual differences. Here we explored the feasibility of using electroencephalography (EEG) to study network variants using repeated measures eyes-closed and eyes-open resting state data from 14 participants taken across three sessions over the course of three months---estimating how much and in which ways band-limited phase coupling and amplitude coupling functional connectomes differed in similarity within and between individuals across contexts. For each coupling mode and frequency band, we hypothesized that if functional connectome organization was influenced by stable individual-dependent factors in our sample, then functional connectomes would be more similar within than between individuals across all contexts, on average, with smaller variations in similarity related to session or state. Overall, our results were inconclusive. Although we generally found consistently positive differences in functional connectome similarity across coupling modes, frequency bands, and contexts---these differences ranged from practically nil to at most small, on average, and were inconsistent across participants. We discuss several factors that may explain the differences between our results and the larger, more consistent effects reported in fMRI network variant studies, such as the spatial and temporal resolution of EEG and fMRI, and the methods used to estimate functional connectivity. We then offer suggestions for future EEG research that might address some shortcomings of our study.
+Functional MRI (fMRI) studies have shown that the human functional connectome exhibits reliable and substantial variability in organization across individuals, so-called network variants. However, it is unclear whether neuroimaging modalities that measure different aspects of brain function show similar evidence of such individual differences. Here we explored the feasibility of using electroencephalography (EEG) to study network variants using repeated measures eyes-closed and eyes-open resting state data from 14 participants taken across three sessions over the course of three months---estimating how much and in which ways band-limited phase coupling and amplitude coupling functional connectomes differed in similarity within and between individuals across contexts. For each coupling mode and frequency band, we hypothesized that if functional connectome organization was influenced by stable individual-dependent factors in our sample, then functional connectomes would be more similar within than between individuals across all contexts, on average, with smaller variations in similarity related to session or state. Overall, our results were inconclusive. Although we generally found consistently positive differences in functional connectome similarity across coupling modes, frequency bands, and contexts on average---depending on the comparison, these differences were either negligible or at most small, and were inconsistent across participants. We discuss several factors that may explain the differences between our results and the larger, more consistent effects reported in fMRI network variant studies, such as the spatial and temporal resolution of EEG and fMRI, and the methods used to estimate functional connectivity. We then offer suggestions for future EEG research that might address some shortcomings of our study.
 
 *Keywords:* Electroencephalography, Functional Connectivity, Network Variants, Individual Differences
 
